# gothamboogy

./: Cargo.toml  README.md
src/: auth.rs  database.rs  form.rs  handlers.rs  main.rs  redis.rs
templates/: login.tpl  loginfail.tpl  main.tpl  nopermission.tpl  register.tpl
